@@ -83,6 +83,14 @@ and <code>javax.security.cert</code> support), we recommend
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>May 20, 2006</b>
+</td><td>
+John David Anglin and Andreas Tobler checked in a <a
+href="http://gcc.gnu.org/ml/gcc-patches/2006-05/msg01004.html">patch</a>
+to enable libjava to be built by default on the HP-UX PA 32-bit platform.
+</td></tr>
+
+<tr><td valign="top">
 <b>May 19, 2006</b>
 </td><td>
 Mark Wielaard has imported <a
