@@ -1,3 +1,7 @@
+2006-05-20  Andreas Tobler  <a.tobler@schweiz.ch>
+
+	* index.html: Add a news entry about the HP-UX PA 32-bit port.
+
 2006-05-19  Ranjit Mathew  <rmathew@gcc.gnu.org>
 
 	* index.html: Add a news entry about the import of GNU Classpath 0.91.
